# AppleCVA-VTS

./: .gitignore  CMakeLists.txt  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: macos-app-prerelease.yml
apps/vts_source/: app_delegate.h  app_delegate.m  calibration.h  client.h  client.m  main.m  parameters.h  parameters.m
apps/vts_source/qml/: Main.qml
apps/vts_source/qt/: controller.h  controller.mm  main.cpp  preview_item.cpp  preview_item.h
cmake/: AppleCVADeployQt.cmake.in
common/: capture.h  overlay_view.h  overlay_view.m  tracking_pipeline.h  tracking_pipeline.m  tracking_utils.h  tracking_utils.m
example/: CameraViewerInfo.plist  README.md  camera_viewer.m
include/: applecva.h
lib/: applecva.m
tools/: clean_xcode_signing.py
tools/ios_intrinsics_collector/IntrinsicsCollector/: App.swift  Info.plist
tools/ios_intrinsics_collector/IntrinsicsCollector.xcodeproj/: project.pbxproj
